--- a/index.html
+++ b/index.html
@@ -1,30 +1,107 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScriptTutorial</title>
-    <style>
-        .container{
-            border : 2px solid yellow;
-            background-color: aqua;
-            
-        };
-        .test-success {
-            color: red;
-        }
-    </style>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+    <title>TODOs List</title>
 </head>
+
 <body>
-    <h1>welcome</h1>
-    <div id="first_container" class="container">
-        <button id="click" onclick=clicked()>Click me</button>
-        <p>best para</p>
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">TODOs List</a>
+    </nav>
+
+    <div class="container my-4">
+        <h2 class="text-center">TODOs List</h2>
+
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" class="form-control" id="title" placeholder="Enter item title">
+        </div>
+
+        <div class="form-group">
+            <label for="description">Description</label>
+            <textarea class="form-control" id="description" rows="3" placeholder="Enter item description"></textarea>
+        </div>
+
+        <button id="add" class="btn btn-primary">Add to list</button>
+        <button id="clear" class="btn btn-danger ml-2" onclick="clearStorage()">Clear list</button>
+
+        <div id="items" class="my-4">
+            <h3>Your Items</h3>
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th scope="col">SNo</th>
+                        <th scope="col">Item Title</th>
+                        <th scope="col">Item Description</th>
+                        <th scope="col">Actions</th>
+                    </tr>
+                </thead>
+                <tbody id="tableBody">
+                    <!-- Items will be added here -->
+                </tbody>
+            </table>
+        </div>
     </div>
-    <div class="container">
-        <p>This is a paragraph</p>
-    </div>
-    <script src="all_aabout_js.js"></script>
+
+    <script>
+        function getAndUpdate() {
+            let title = document.getElementById('title').value.trim();
+            let description = document.getElementById('description').value.trim();
+
+            if (title === "" || description === "") {
+                alert("Title and Description cannot be empty.");
+                return;
+            }
+
+            let itemsJsonArray = localStorage.getItem('itemsJson') ? JSON.parse(localStorage.getItem('itemsJson')) : [];
+            itemsJsonArray.push([title, description]);
+            localStorage.setItem('itemsJson', JSON.stringify(itemsJsonArray));
+
+            document.getElementById('title').value = "";
+            document.getElementById('description').value = "";
+
+            update();
+        }
+
+        function update() {
+            let itemsJsonArray = localStorage.getItem('itemsJson') ? JSON.parse(localStorage.getItem('itemsJson')) : [];
+
+            let tableBody = document.getElementById("tableBody");
+            tableBody.innerHTML = itemsJsonArray.map((element, index) => `
+                <tr>
+                    <th scope="row">${index + 1}</th>
+                    <td>${element[0]}</td>
+                    <td>${element[1]}</td>
+                    <td>
+                        <button class="btn btn-sm btn-danger" onclick="deleteItem(${index})">Delete</button>
+                    </td>
+                </tr>
+            `).join('');
+        }
+
+        function deleteItem(itemIndex) {
+            if (confirm("Are you sure you want to delete this item?")) {
+                let itemsJsonArray = JSON.parse(localStorage.getItem('itemsJson'));
+                itemsJsonArray.splice(itemIndex, 1);
+                localStorage.setItem('itemsJson', JSON.stringify(itemsJsonArray));
+                update();
+            }
+        }
+
+        function clearStorage() {
+            if (confirm("Do you really want to clear the entire list?")) {
+                localStorage.clear();
+                update();
+            }
+        }
+
+        document.getElementById("add").addEventListener("click", getAndUpdate);
+        update();
+    </script>
 </body>
 
 </html>
